onpremApim/hieuonprem-nodeport.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hieuonprem
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hieuonprem
  template:
    metadata:
      labels:
        app: hieuonprem
    spec:
      dnsPolicy: Default
      containers:
      - name: hieuonprem
        image: mcr.microsoft.com/azure-api-management/gateway:alpha
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
---
apiVersion: v1
kind: Service
metadata:
  name: hieuonprem
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
  - name: https
    port: 443
  selector:
    app: hieuonprem
