onpremApim/hieuonprem-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hieuonprem-ingress
spec:
  rules:
  - host: zbank.52.163.222.39.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: hieuonprem
          servicePort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hieuonprem
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hieuonprem
  template:
    metadata:
      labels:
        app: hieuonprem
    spec:
      dnsPolicy: Default
      containers:
      - name: hieuonprem
        image: mcr.microsoft.com/azure-api-management/gateway:alpha
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
---
apiVersion: v1
kind: Service
metadata:
  name: hieuonprem
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
  - name: https
    port: 443
  selector:
    app: hieuonprem
